--- a/Assignment 3/Assignment 3.qmd
+++ b/Assignment 3/Assignment 3.qmd
@@ -219,6 +219,7 @@ cat("Remaining rows:", nrow(train_wo_outliers), "\n")
 ### One-hot-encoding for categorical values
 Deep learning can only handle numerical values, so we need to create a one-hot encoding for all categorical variables.
 ```{r}
+# encoding nominal variables in one-hot encoding
 nominal_vars <- c("Mjob","Fjob","reason","guardian")
 
 train_one_hot <- dummy_cols(
@@ -230,6 +231,7 @@ train_one_hot <- dummy_cols(
 
 We also need to convert binary factors to 0 or 1.
 ```{r}
+# converting binary variables to 0 or 1
 binary_vars <- c("school","sex","address", "famsize", "Pstatus")
 
 # assigning TRUE or FALSE to binary values (the second possible value is assigned 1 the first 0)
@@ -386,7 +388,7 @@ y_val <- val_deep$score
 y_test <- test_deep$score
 
 # defining model
-model <- keras_model_sequential() %>%
+model_deepl <- keras_model_sequential() %>%
   layer_dense(units= 128, activation = "relu", input_shape = ncol(x_train)) %>%
   layer_dropout(rate = 0.2) %>%
   layer_dense(units = 64, activation = "relu") %>%
@@ -395,14 +397,14 @@ model <- keras_model_sequential() %>%
   layer_dense(units = 1)
 
 # compiling
-model %>% compile(
+model_deepl %>% compile(
   optimizer = optimizer_adam(learning_rate = 0.0003),
   loss = "mse",
   metrics = list("mae","mse")
 )
 
 # training
-history <- model %>% fit(
+history <- model_deepl %>% fit(
   x = x_train,
   y = y_train,
   epochs = 1000,
@@ -413,8 +415,8 @@ history <- model %>% fit(
 )
 
 # evaluation
-model %>% evaluate(x_test, y_test, verbose = 1)
-predictions_deepl <- model %>% predict(x_test)
+model_deepl %>% evaluate(x_test, y_test, verbose = 1)
+predictions_deepl <- model_deepl %>% predict(x_test)
 ```
 
 
@@ -441,7 +443,7 @@ data.frame(
   mean_squared_error = c(mse_linear, mse_knn, mse_deepl)
 )
 ```
-Interestingly, it seems that both the KNN and the neural network underfits the data, since the linear regression has the least MAE and MSE. Possible reasons for this could be a mostly linear dataset, or that the dataset is relatively small (only 316 entries altogether). 
+Our best performing model is the deep learning, which slightly outperforms the KNN and linear regression. LR and KNN seem to be very similar in performance. Since there are no big differences between the models, we can assume that the data is mostly linear. 
 
 ```{r}
 prediction_comparison <- 
@@ -460,10 +462,87 @@ ggplot(prediction_comparison, aes(x=Model, y=Scores, fill=Model)) +
   labs(y = "Scores", x="", title = "Predictions vs True Scores") +
   guides(fill="none")
 ```
-If we look at the distribution of the data, we can see that none of the models capture the range of scores that the students actually had and all of them estimate scores to be closer to the mean. The deep learning network has the widest range, but it does not outperform the linear regression in accuracy. 
+If we look at the distribution of the data, we can see that none of the models capture the range of scores that the students actually had and all of them estimate scores to be closer to the mean. The deep learning has the highest range of predictions that is most similar to the test set, but it still doesn't cover all the scores. 
 
 # Chosen model
-We chose linear regression as our model, since that resulted in the lower error on the dataset. It is easily interpretable unlike the deep learning model and much more computionally efficient.
+We chose the deep learning as our final models, since it produces the lowest error and the most similar distribution of predictions to the test data.
+
+### Preparing the test dataset
+For the test dataset we also have to carry out the same steps.
+Since the deep learning and KNN models are sensitive to scaling, we have to also normalize the test dataset to create accurate predictions. 
+```{r}
+# change categorical variables to factors
+test_clean <- test %>%
+  mutate(across(where(is.character), as.factor))
+
+# Identify yes/no columns automatically and assign them boolean values
+test_clean <- test_clean %>%
+  mutate(across(
+    where(~ (is.character(.) || is.factor(.)) && all(tolower(unique(.)) %in% c("yes", "no"))),
+    ~ tolower(as.character(.)) == "yes"
+  ))
+
+# scaling 1-5 scores (5 will be 1 and 1 will be scaled to 0)
+test_norm <- test_clean %>% mutate(across(c("famrel","freetime","goout","Dalc","Walc", "health"), ~ (. - 1) / 4))
+
+# scaling 1-4 scores (4 will be 1 and 1 will be scaled to 0)
+test_norm <- test_clean %>% mutate(across(c(Medu, Fedu), ~ . / 4))
+
+# scaling bin-type variables to their midpoints (traveltime and studytime)
+
+# travel time in minutes with approximate midpoints
+test_norm <- test_norm %>%
+  mutate(traveltime = case_when(
+    traveltime == 1 ~ 7.5,
+    traveltime == 2 ~ 22.5,
+    traveltime == 3 ~ 45,
+    traveltime == 4 ~ 75
+  )) 
+
+# studytime in hours with approximate midpoints
+test_norm <- test_norm %>%
+  mutate(studytime = case_when(
+    studytime == 1 ~ 1,
+    studytime == 2 ~ 3.5,
+    studytime == 3 ~ 7.5,
+    studytime == 4 ~ 12
+  ))
+
+test_norm <- test_norm %>% 
+  mutate(
+    traveltime = (traveltime - min(traveltime)) / (max(traveltime) - min(traveltime)),
+    studytime = (studytime - min(studytime)) / (max(studytime) - min(studytime))
+    )
+
+# scaling using normal distribution
+test_norm <- test_norm %>% mutate(across(c(failures, age, absences), ~ as.numeric(scale(.))))
+
+nominal_vars <- c("Mjob","Fjob","reason","guardian")
+
+test_one_hot <- dummy_cols(
+  test_norm,
+  select_columns = nominal_vars,
+  remove_selected_columns = TRUE
+)
+
+# converting binary variables to 0 or 1
+binary_vars <- c("school","sex","address", "famsize", "Pstatus")
+
+# assigning TRUE or FALSE to binary values (the second possible value is assigned 1 the first 0)
+test_one_hot <- test_one_hot %>% mutate(across(all_of(binary_vars), ~ as.integer(.x == levels(.x)[2])))
+```
+
+### Creating rds file with test predictions
+```{r}
+# creating predictions
+x_test_data <- test_one_hot %>% as.matrix()
+test_data_predictions <- model_deepl %>% predict(x_test)
+
+# create vector & write rds
+pred_vec <- as.vector(test_data_predictions)
+write_rds(pred_vec, 'predictions.rds')
+```
+
 
 # Team member contributions
 
